--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="nav-container">
         <nav class="navbar">
             <h2 class="navbar-logo">Productos</h2>
+            <div class="buscador">
+                <input id="nombreProducto" onchange="funcionFiltrado()" type="text" placeholder="  🔍 Busca tu producto " />
+            </div>
             <h2 class="ver-carrito" id="verCarrito"> 🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span>
             </h2>
         </nav>
