--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="style.css">
+
     <title>Tienda Objeto</title>
 </head>
 
@@ -16,7 +20,8 @@
         <nav class="navbar">
             <h2 class="navbar-logo">Productos</h2>
             <div class="buscador">
-                <input id="nombreProducto" onchange="funcionFiltrado()" type="text" placeholder="  🔍 Busca tu producto " />
+                <input id="nombreProducto" onchange="funcionFiltrado()" type="text"
+                    placeholder="  🔍 Busca tu producto " />
             </div>
             <h2 class="ver-carrito" id="verCarrito"> 🛒 <span id="cantidadCarrito" class="cantidad-carrito"></span>
             </h2>
@@ -39,10 +44,11 @@
 
     <div id="modalContainer" class="modal-container"></div>
 
-
-    <script src="./js/products.js"></script>
+    <!-- Script -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/miarchivo.js"> </script>
-    <script src="./js/carrito.js"></script>
+
 </body>
 
 </html>
