--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tienda de productos de bazar">
+    <meta name="keywords" content="bazar, productos cocina, productos beauty, iluminación, difusores">
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Tienda Objeto</title>
+    <link rel="shortcut icon" href="./img/logo-tienda.jpeg" type="image/x-icon">
 </head>
 
 <body>
-
     <!-- navbar -->
     <div class="nav-container">
         <nav class="navbar">
@@ -37,12 +39,18 @@
     </div>
 
     <!-- contenedor principal -->
-
     <div id="shopContainer" class="shop-container"></div>
 
     <!-- contenedor modal -->
-
     <div id="modalContainer" class="modal-container"></div>
+
+    <footer class="pieDePagina">
+
+        <p> &#169 2022 Rocio Emme - Todos los derechos reservados</p>
+
+        </div>
+
+    </footer>
 
     <!-- Script -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
